@@ -39,7 +39,7 @@
 	* Реорганизация кода UDPReader, что теперь позволяет смотреть IPTV (udp multicast);
 	* UDPReader - перевел на использование non-blocked(асинхронного) режима работы;
 	* MediaInfo 0.7.64+ svn rev.5959;
-	* Little-CMS 2.5 git-ad2cb04b;
+	* Little-CMS 2.5 git-fda1211c;
 	* ffmpeg 2.0.2 git-610a8b15;
 	* libwebp 0.3.1 git-7c098d18;
 	* libpng 1.7.0 b21 git-fe6e6cf1;
